# pupiltracker

./: .hgignore  CMakeLists.txt  README.md
Release/: pupiltracker.lib
cgf/: params.cgf
cmake/: FindTBB.cmake
cmd/: CMakeLists.txt  PupilTrackerCmd.cpp
include/pupiltracker/: utils.h
src/: PupilTracker.cpp  cvx.cpp
